# template-copilot-kit-py

./: pyproject.toml
explorer-mcp/: pyproject.toml
src/: __main__.py  main.py
