[project]
name = "template-copilotkit-py"
version = "0.1.5"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "blaxel[langgraph,telemetry]==0.2.39",
    "copilotkit>=0.1.46",
    "fastapi[standard]>=0.115.12",
    "langgraph-supervisor>=0.0.4",
    "rich>=13.9.4",
    "playwright>=1.51.0",
    "html2text>=2025.4.15",
]
[dependency-groups]
dev = ["ruff>=0.8.2"]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]

[tool.hatch.metadata]
allow-direct-references = true
